# LEEGVAULT

./: .gitignore  CMakeLists.txt  CMakePresets.json  PRD.md  README.md  vcpkg.json
docs/superpowers/plans/: 2026-07-03-m1-crypto-core.md
src/cli/: main.cpp
src/core/: aead.cpp  aead.hpp  cbor.cpp  cbor.hpp  commit.cpp  commit.hpp  errors.hpp  header.cpp  header.hpp  kdf.cpp  kdf.hpp  model.cpp  model.hpp  secure_buffer.hpp  sodium_init.cpp  sodium_init.hpp  vault.cpp  vault.hpp
src/storage/: vault_file.cpp  vault_file.hpp
tests/: test_aead.cpp  test_cbor_model.cpp  test_commit.cpp  test_header.cpp  test_kdf.cpp  test_secure_buffer.cpp  test_smoke.cpp  test_vault.cpp  test_vault_file.cpp  test_vectors.cpp
tests/vectors/: lgv1-kat.json
tools/: emit_vectors.cpp
